# cql

./: .env  .gitignore  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  bazel-cql  build.sh  deps.bzl  docker-compose.yaml  generate.docker-compose.yaml  generate.py  go.mod  go.sum  gqlgen.yml  meta.docker-compose.yaml  models_gen.go  server.go
client/: BUILD.bazel  assigner.go  body.go  body_type.go  client.go  client_mock.go  coinbase.go  coinbase_pro.go  coinbse.go  connector.go  endpoint.go  errors.go  fetch.go  fetch_response.go  generator.go  go.mod  go.sum  kind.go  method.go  parent.go  request.go
client2/: assigner.go  (+10 more)
cmd/graphql/: BUILD.bazel  main.go  server.go
coinbase/: BUILD.bazel  README.md  accounts.go  async_ticker.go  async_ticker_test.go  async_ticket_test.go  client.go  coinbase_account_test.go  coinbase_accounts.go  common.go  const.go  conversion.go  conversion_test.go  currency.go  currency_test.go  endpoint.go  endpoint_getters.go  fees.go  go.mod  go.sum  market_data.go  market_data_test.go  mock_c.go  mock_websocket_connector.go  orders.go  parent.go  pointer.go  private.go  pro_c.go  product_websocket.go  transfer.go  transfers.go  websocket.go  websocket_connector.go  websocket_message.go  websocket_test.go
env/: .test.env  BUILD.bazel  env.go  env_test.go  go.mod
graph/: BUILD.bazel  README.md  __schema.resolvers.go  coinbase_currency_details.resolvers.go  coinbase_deposit_address.resolvers.go  coinbase_product_order_book.resolvers.go  go.mod  go.sum  schema.graphqls  schema.resolvers.go  server.go
graph/model/: models_gen.go
graph/schema/: acoinbase_currency.graphqls  coinbase_account.graphqls  coinbase_account_deposit_options.graphqls  coinbase_account_history.graphqls  coinbase_account_history_details.graphqls  coinbase_account_hold.graphqls  coinbase_account_holds_options.graphqls  coinbase_account_ledger.graphqls  coinbase_account_ledger_details.graphqls  coinbase_account_ledger_options.graphqls  coinbase_account_transfer.graphqls  coinbase_account_transfer_details.graphqls  coinbase_account_transfer_options.graphqls  coinbase_account_transfers_options.graphqls  coinbase_account_withdrawal_options.graphqls  coinbase_available_balance.graphqls  coinbase_balance.graphqls  coinbase_bank_country.graphqls  coinbase_coinbase_account_deposit_options.graphqls  coinbase_conversion_options.graphqls  coinbase_conversions_options.graphqls  coinbase_crypto_account.graphqls  coinbase_crypto_address.graphqls  coinbase_crypto_address_info.graphqls  coinbase_crypto_address_warning.graphqls  coinbase_crypto_withdrawal_options.graphqls  coinbase_currency.graphqls  coinbase_currency_conversion.graphqls  coinbase_currency_conversion_opts.graphqls  coinbase_currency_details.graphqls  coinbase_deposit.graphqls  coinbase_deposit_address.graphqls  coinbase_fees.graphqls  coinbase_fiat_account.graphqls  coinbase_fill.graphqls  coinbase_fills_options.graphqls  coinbase_limits.graphqls  coinbase_new_order.graphqls  coinbase_new_order_options.graphqls  coinbase_order.graphqls  (+43 more)
graph/schema2/: coinbase_account.graphqls  coinbase_hold.graphqls
iex/: BUILD.bazel  README.md  c.go  endpoint.go  go.mod  go.sum  rules_engine.go
kraken/: BUILD.bazel  README.md  c.go  endpoint.go  go.mod  go.sum  market_data.go
model/: BUILD.bazel  coinbase_account.go  coinbase_account_history.go  coinbase_account_history_details.go  coinbase_account_hold.go  coinbase_account_ledger.go  coinbase_account_ledger_details.go  coinbase_account_transfer.go  coinbase_account_transfer_details.go  coinbase_account_withdrawal.go  coinbase_available_balance.go  coinbase_balance.go  coinbase_bank_country.go  coinbase_buy_price.go  coinbase_crypto_account.go  coinbase_crypto_address.go  coinbase_crypto_address_info.go  coinbase_crypto_address_warning.go  coinbase_currency.go  coinbase_currency_conversion.go  coinbase_currency_details.go  coinbase_deposit.go  coinbase_deposit_address.go  coinbase_deposit_address_info.go  coinbase_deposit_address_warnings.go  coinbase_fees.go  coinbase_fiat_account.go  coinbase_fill.go  coinbase_limits.go  coinbase_market_data_currency.go  coinbase_market_data_currency_details.go  coinbase_message.go  coinbase_new_order.go  coinbase_order.go  coinbase_payment_method.go  coinbase_picker_data.go  coinbase_product.go  coinbase_product_daily_stats.go  coinbase_product_historical_rate.go  coinbase_product_order_book.go  (+50 more)
opensea/: BUILD.bazel  c.go  endpoint.go  nft.go
pkg/client/: BUILD.bazel  body_type.go  client_mock.go  errors.go  log.go
pkg/coinbase/: BUILD.bazel  accounts.go  async_ticker.go  coinbase_accounts.go  conversion.go  currency.go  product_websocket.go  transfer.go  websocket_channel.go
pkg/iex/: BUILD.bazel  c.go  rules_engine.go
pkg/kraken/: BUILD.bazel  c.go  market_data.go
protomodel/: BUILD.bazel  README.md  coinbase_account.go  coinbase_account_hold.go  coinbase_account_ledger.go  coinbase_account_ledger_details.go  coinbase_account_test.go  coinbase_account_transfer.go  coinbase_account_transfer_details.go  coinbase_available_balance.go  coinbase_balance.go  coinbase_bank_country.go  coinbase_crypto_account.go  coinbase_crypto_address.go  coinbase_crypto_address_info.go  coinbase_crypto_address_warning.go  coinbase_currency.go  coinbase_currency_conversion.go  coinbase_currency_details.go  coinbase_deposit.go  coinbase_fees.go  coinbase_fiat_account.go  coinbase_fill.go  coinbase_hold.go  coinbase_limits.go  coinbase_new_order.go  coinbase_order.go  coinbase_payment_method.go  coinbase_picker_data.go  coinbase_recurring_options.go  coinbase_sepa_deposit_information.go  coinbase_single_product.go  coinbase_swift_deposit_information.go  coinbase_uk_deposit_information.go  coinbase_wallet.go  coinbase_websocket_ticker.go  coinbase_wire_deposit_information.go  coinbase_withdrawal.go  coinbase_withdrawal_fee_estimate.go  const.go  (+17 more)
scalar/: BUILD.bazel  README.md  cancel_after.go  entry_type.go  go.mod  order_cancel_time.go  order_side.go  order_stop.go  order_stp.go  order_type.go  payment_method.go  system_status.go  time_in_force.go
(+195 files in other folders)
