load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "assigner.go",
        "body.go",
        "body_type.go",
        "client.go",
        "client_mock.go",
        "connector.go",
        "endpoint.go",
        "errors.go",
        "log.go",
        "method.go",
        "parent.go",
        "request.go",
    ],
    importpath = "github.com/cryptometrics/cql/client",
    visibility = ["//visibility:public"],
    deps = [
        "//model",
        "@com_github_golang_mock//gomock",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
