load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coinbase",
    srcs = [
        "accounts.go",
        "async_ticker.go",
        "coinbase_accounts.go",
        "conversion.go",
        "currency.go",
        "endpoint.go",
        "market_data.go",
        "mock_c.go",
        "mock_websocket_connector.go",
        "orders.go",
        "pointer.go",
        "private.go",
        "pro_c.go",
        "product_websocket.go",
        "transfer.go",
        "websocket.go",
        "websocket_channel.go",
        "websocket_connector.go",
        "websocket_message.go",
    ],
    importpath = "github.com/cryptometrics/cql/coinbase",
    visibility = ["//visibility:public"],
    deps = [
        "//client",
        "//env",
        "//model",
        "@com_github_franela_goblin//:goblin",
        "@com_github_golang_mock//gomock",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "coinbase_test",
    srcs = ["async_ticket_test.go"],
    embed = [":coinbase"],
    deps = [
        "//model",
        "@com_github_franela_goblin//:goblin",
    ],
)
