load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "resolver.go",
        "schema.resolvers.go",
        "server.go",
    ],
    importpath = "github.com/cryptometrics/cql/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//coinbase",
        "//graph/generated",
        "//iex",
        "//kraken",
        "//model",
        "@com_github_99designs_gqlgen//graphql/handler:go_default_library",
        "@com_github_99designs_gqlgen//graphql/playground:go_default_library",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
