load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/cryptometrics/cql/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//coinbase",
        "//graph/generated",
        "//iex",
        "//kraken",
        "//model",
    ],
)
