load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kraken",
    srcs = [
        "c.go",
        "endpoint.go",
        "market_data.go",
    ],
    importpath = "github.com/cryptometrics/cql/kraken",
    visibility = ["//visibility:public"],
    deps = [
        "//client",
        "//env",
        "//model",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
