load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = [
        "coinbase_account.go",
        "coinbase_account_hold.go",
        "coinbase_account_ledger.go",
        "coinbase_account_ledger_details.go",
        "coinbase_account_transfer.go",
        "coinbase_account_transfer_details.go",
        "coinbase_available_balance.go",
        "coinbase_balance.go",
        "coinbase_bank_country.go",
        "coinbase_crypto_account.go",
        "coinbase_crypto_address.go",
        "coinbase_crypto_address_info.go",
        "coinbase_crypto_address_warning.go",
        "coinbase_currency.go",
        "coinbase_currency_conversion.go",
        "coinbase_currency_details.go",
        "coinbase_deposit.go",
        "coinbase_fiat_account.go",
        "coinbase_limits.go",
        "coinbase_payment_method.go",
        "coinbase_picker_data.go",
        "coinbase_recurring_options.go",
        "coinbase_sepa_deposit_information.go",
        "coinbase_single_product.go",
        "coinbase_swift_deposit_information.go",
        "coinbase_uk_deposit_information.go",
        "coinbase_wallet.go",
        "coinbase_websocket_ticker.go",
        "coinbase_wire_deposit_information.go",
        "coinbase_withdrawal.go",
        "coinbase_withdrawal_fee_estimate.go",
        "error_message.go",
        "graph_models_gen.go",
        "iex_rule.go",
        "iex_rules_schema.go",
        "iex_rules_scheme.go",
        "kraken_server_time.go",
        "kraken_server_time_result.go",
        "kraken_system_status.go",
        "kraken_system_status_result.go",
        "proto_accessors.go",
    ],
    importpath = "github.com/cryptometrics/cql/model",
    visibility = ["//visibility:public"],
    deps = ["//protomodel"],
)

go_test(
    name = "model_test",
    srcs = ["ca_test.go"],
    embed = [":model"],
    deps = ["@com_github_franela_goblin//:goblin"],
)
