load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coinbase",
    srcs = [
        "accounts.go",
        "async_ticker.go",
        "coinbase_accounts.go",
        "conversion.go",
        "currency.go",
        "endpoint.go",
        "market_data.go",
        "mock_c.go",
        "pointer.go",
        "private.go",
        "pro_c.go",
        "product_websocket.go",
        "transfer.go",
        "websocket.go",
        "websocket_channel.go",
        "websocket_connector.go",
        "websocket_message.go",
    ],
    importpath = "github.com/cryptometrics/cql/pkg/coinbase",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_franela_goblin//:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "coinbase_test",
    srcs = ["websocket_test.go"],
    embed = [":coinbase"],
)
