load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "iex",
    srcs = [
        "c.go",
        "endpoint.go",
        "rules_engine.go",
    ],
    importpath = "github.com/example/project/pkg/iex",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
