load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kraken",
    srcs = [
        "c.go",
        "endpoint.go",
        "market_data.go",
    ],
    importpath = "github.com/example/project/pkg/kraken",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
